plugins {
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'java'
    id 'jacoco'
}

group = 'net.adamgoodridge'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '25'
}

dependencyManagement {
    imports {
        mavenBom 'org.testcontainers:testcontainers-bom:1.21.0'
    }
}

repositories {
    mavenCentral()
    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        // Allow Gson (and other reflection) to access CompletableFuture internals
        jvmArgs += ['--add-opens=java.base/java.util.concurrent=ALL-UNNAMED']
    }
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    // Preserve the default resource processing
    from("${projectDir}/src/main/resources") {
        include "**/*"
        exclude("**/*.p12") // Exclude p12 files from default resource processing
    }

    // Add certificates specifically
    from("${projectDir}/src/main/resources/certs") {
        include "*.p12"
        into ""
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }
}

test {
    useJUnitPlatform()

    // Ensure test classpath includes main classes
    testClassesDirs = sourceSets.test.output.classesDirs + sourceSets.main.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath + sourceSets.main.runtimeClasspath
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.github.hazendaz.jsoup:jsoup:1.15.1'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers:4.0.5'
    testImplementation 'org.testcontainers:mongodb:1.21.4'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
    testImplementation 'org.mockito:mockito-core:5.23.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
    // https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api
    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    // https://mvnrepository.com/artifact/org.mockito/mockito-core
    testImplementation("org.springframework.boot:spring-boot-starter-test")

    compileOnly 'org.projectlombok:lombok:1.18.44' // Use the latest version
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

}

jacocoTestReport {
    dependsOn test
}
